# openGLViewer

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md
GLM/: CMakeLists.txt
GLM/glm/: CMakeLists.txt
res/: fragment.glsl  vertex.glsl
src/: main.cpp  shader.cpp  shader.h
